--- a/NavigationMockUp/Properties/Resources.resx
+++ b/NavigationMockUp/Properties/Resources.resx
@@ -151,6 +151,12 @@
   <data name="buttonSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\buttonSettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="click" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\click.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="MapVideo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MapVideo.mp4;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="titleBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\titleBar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
